Fixed Image spacing & changed id names to be in CSS convention

--- a/src/App.css
+++ b/src/App.css
@@ -281,6 +281,13 @@ p#card-info{
 }
 
 /* Search page styling */
+#museum-pic, #coffee-pic-0, #people-pic, #cafe-pic, #pasta-pic, #hike-pic{
+  margin-bottom: 15px;
+}
+
+
+
+
 .dollarButton {
   border-radius: 40px;
   height: 70px;
